frontend/test/should_pass/basic_067.grg
using basic_model_002;

rule r {
	x : BC;

	replace {
		eval {
			x.ib = 42;
			x.ic = 42;
		}
	}
}

