frontend/test/should_fail/range_001.grg
using range_001;

rule r {
	replace {
	}
}

